# evalexpr-jit

./: Cargo.toml  README.md
.github/workflows/: format.yml  lint.yml  publish.yml  test.yml
benches/: expressions.rs  library_comparison.rs  simulation.rs  simulation_comparison.rs
examples/: backends.rs  comparison.rs  library_comparison.rs  simulation.rs  system_comparison.rs  system_simulation.rs
src/: builder.rs  convert.rs  equation.rs  errors.rs  expr.rs  lib.rs  opt.rs  system.rs  types.rs
src/backends/: matrix.rs  vector.rs
src/operators/: exp.rs  ln.rs  pow.rs  sqrt.rs  trigonometric.rs
