[package]
name = "evalexpr-jit"
version = "0.2.0"
edition = "2021"
authors = ["Jan Range <jan.range@simtech.uni-stuttgart.de>"]
description = "JIT compilation and symbolic differentiation of evalexpr expressions with Cranelift."
license = "MIT"
repository = "https://github.com/jr-1991/evalexpr-jit"

[dependencies]
cranelift = "0.115.0"
cranelift-jit = "0.115.0"
cranelift-module = "0.115.0"
cranelift-codegen = "0.115"
cranelift-native = "0.115.0"
evalexpr = "12.0.2"
thiserror = "2.0.9"
target-lexicon = "0.13.1"
colored = "3.0.0"
itertools = "0.14.0"
rayon = "1.10.0"
ndarray = { version = "0.16.1", optional = true }
nalgebra = { version = "0.33.2", optional = true }

[dev-dependencies]
fasteval = "0.2.4"
num_cpus = "1.16.0"
ode_solvers = "0.5.0"

[features]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
