[package]
name = "evalexpr-jit"
version = "0.2.1"
edition = "2021"
authors = ["Jan Range <jan.range@simtech.uni-stuttgart.de>"]
description = "JIT compilation and symbolic differentiation of evalexpr expressions with LLVM or Cranelift."
license = "MIT"
repository = "https://github.com/jr-1991/evalexpr-jit"

[dependencies]
# Backend dependencies
cranelift = { version = "0.115.0", optional = true }
cranelift-jit = { version = "0.115.0", optional = true }
cranelift-module = { version = "0.115.0", optional = true }
cranelift-codegen = { version = "0.115", optional = true }
cranelift-native = { version = "0.115.0", optional = true }
inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }

# Core dependencies
evalexpr = "12.0.2"
thiserror = "2.0.9"
target-lexicon = "0.13.1"
colored = "3.0.0"
itertools = "0.14.0"
rayon = "1.10.0"
ndarray = { version = "0.16.1", optional = true }
nalgebra = { version = "0.33.2", optional = true }

[dev-dependencies]
criterion = "0.6.0"
fasteval = "0.2.4"
num_cpus = "1.16.0"
ode_solvers = "0.5.0"

[features]
default = ["llvm-backend"]
llvm-backend = ["dep:inkwell"]
cranelift-backend = [
    "dep:cranelift",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-codegen",
    "dep:cranelift-native",
]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]

[profile.release]
opt-level = 3

[[bench]]
name = "library_comparison"
harness = false

[[bench]]
name = "simulation_comparison"
harness = false
