[package]
name = "evalexpr-jit"
version = "0.2.2"
edition = "2021"
authors = ["Jan Range <jan.range@simtech.uni-stuttgart.de>"]
description = "JIT compilation and symbolic differentiation of evalexpr expressions with Cranelift."
license = "MIT"
repository = "https://github.com/jr-1991/evalexpr-jit"

[dependencies]
cranelift = "0.121.1"
cranelift-jit = "0.121.1"
cranelift-module = "0.121.1"
cranelift-codegen = "0.121.1"
cranelift-native = "0.121.1"
evalexpr = "12.0.2"
thiserror = "2.0.9"
target-lexicon = "0.13.1"
colored = "3.0.0"
itertools = "0.14.0"
rayon = "1.10.0"
ndarray = { version = "0.16.1", optional = true }
nalgebra = { version = "0.33.2", optional = true }

[dev-dependencies]
criterion = "0.6.0"
fasteval = "0.2.4"
num_cpus = "1.16.0"
ode_solvers = "0.5.0"

[features]
default = ["nalgebra", "ndarray"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "expressions"
harness = false

[[bench]]
name = "simulation"
harness = false

[lints.clippy]
result_large_err = "allow"
